--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.web.resources.static-locations=/WEB-INF/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db_abcjobs
 spring.datasource.username=root
-spring.datasource.password=Turnup6129.
+spring.datasource.password=
 
 ##JPA-HIBERNATE
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
